[project]
name = "travel-agent-seat-idempotency-fix"
version = "0.1.0"
description = "Travel assistant seat-selection agent with a retry idempotency flaw"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
